--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,5 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
-  "typeRoots": [
-    "node_modules/@types",
-    "custom_typings/"
-  ] 
+  "typeRoots": ["node_modules/@types", "custom_typings/"]
 }
